# tshort

./: .tshort.json  Cargo.toml  README.md  config.json  default.nix  flake.nix  shell.nix
src/: actions.rs  application.rs  commands.rs  gui.rs  main.rs  project.rs  project_test.rs  projects.rs  selector.rs  tmux.rs  utils.rs
