[package]
name = "tshort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
tmux_interface = { version = "^0.1.0", features = ["tmux_2_6"], default-features = false }
skim = "0.9.4"
