[package]
name = "tshort"
version = "0.1.4"
edition = "2021"
description = "Package to quickly switch from sessions on tmux and browse directories for projects"
homepage = "https://github.com/adalessa/tshort"
respository = "https://github.com/adalessa/tshort"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "config.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rofi = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
tmux_interface = { version = "^0.1.0", features = ["tmux_2_6"], default-features = false }
skim = "0.9.4"
itertools = "0.10.3"
clap = { version = "4.0.15", features = ["derive"] }
